# zerobrew

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  benchmark.sh  install-completions.sh
.github/workflows/: release.yml
zb_cli/src/: cli.rs  init.rs  main.rs  ui.rs
zb_cli/src/commands/: bundle.rs  init.rs  install.rs  migrate.rs  reset.rs  uninstall.rs
zb_cli/tests/: integration.rs
zb_core/fixtures/: formula_foo.json
zb_core/src/: bottle.rs  errors.rs
zb_io/: Cargo.toml
zb_io/src/: download.rs  homebrew.rs  install.rs  lib.rs  link.rs  linux_patch.rs  materialize.rs
zb_io/src/extraction/patch/: macos.rs
zb_io/src/installer/: cask.rs
zb_io/src/network/: suggest.rs
zb_io/src/storage/: db.rs
